$Id: History,v 1.43 2001-11-12 11:20:50 maire Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
     
12 nov 01: mma (stand-V03-02-14)
- ParticleMass and Charge : local variables
- merge 11a + 13
- some cleanup in G4hEnergyLoss.hh and .cc 
     
29 oct 01: mma (stand-V03-02-13)
- all static functions no more inlined
     
23 oct 01: mma (stand-V03-02-12)
- cut per material: Ve(h)EnergyLoss, e(h)Ionisation, eBremsstrahlung,
  PAIEnergyLoss, PAIonisation, SynchrotronRadiation     

08 nov 01: G.Cosmo (stand-V03-02-11a)
- Introduced changes to G4VeEnergyLoss.cc and G4VhEnergyLoss.cc for reference
  counted touchables (R.Chytracek). Not included in "stand-V03-02-12" and
  "stand-V03-02-13".

23 oct 01: G.Cosmo (stand-V03-02-11)
- Minor fix to G4PAIxSection.cc, added inclusion of G4Material.hh to cope
  with latest updates included in materials-V03-02-04.

11 oct 01: mma (stand-V03-02-10)
- activate buildDEDXTable() in G4hIonisation::retrievePhysicsTable()

11 oct 01: G.Cosmo (stand-V03-02-09)
- G4VPAIenergyLoss.hh: removed redundant inclusion of RW wrapper header.
 
01 oct 01: mma (stand-V03-02-08)
- Phot,Comp,Conv,Annil: come back to BuildPhysicsTable(particleDefinition)
  invoked from the process manager