@@ -1,4 +1,4 @@
-$Id: History,v 1.43 2001-11-12 11:20:50 maire Exp $
+$Id: History,v 1.44 2002-01-10 18:26:36 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+     
+10 jan 02: mma 
+- photoEffect: rearrangement in the inlined functions
      
 12 nov 01: mma (stand-V03-02-14)
 - ParticleMass and Charge : local variables
